# electronicmail

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
android/: .gitignore  settings.gradle
android/app/: .gitignore  build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: strings.xml  themes.xml
src/: app.rs  auth.rs  autoconfig.rs  calendar.rs  config.rs  fonts.rs  format.rs  htmlview.rs  idle.rs  imap_client.rs  lib.rs  main.rs  model.rs  search.rs  smtp_client.rs  spam.rs  storage.rs  update.rs  worker.rs
